03-kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: echo-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: tyumin000/devopscloudrucamp:echo-server-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
      imagePullSecrets:
        - name: docker-registry-credentials
